<resources>
    <string name="app_name">NMedia</string>
    <string name="description_avatar">Post autor avatar</string>
    <string name="author">none</string>
    <string name="datePublication">none</string>
    <string name="description_baseline_more_vert_24" translatable="false">Button more</string>
    <string name="content">none</string>
    <string name="favorite" translatable="false">999</string>
    <string name="share" translatable="false">999</string>
    <string name="remove">Remove</string>
    <string name="input">Input</string>
    <string name="error_emply_text">Text is blank!</string>
    <string name="edit">Edit</string>
    <string name="chooser_share_post" translatable="false">Share post</string>
    <string name="description_post_save" translatable="false">Post save</string>
    <string name="description_post_edit" translatable="false">Post edit</string>
    <string name="description_video_preview" translatable="false">Video preview</string>
    <string name="notification_user_favorite" translatable="false">User %1$s favorite %2$s\'s post</string>
    <string name="channel_remote_name" translatable="false">Server notifications</string>
    <string name="channel_remote_description" translatable="false">Notifications from remote sever</string>
    <string name="notification_user_new_post" translatable="false">%1$s</string>
    <string name="no_posts" translatable="false">No posts</string>
    <string name="network_error" translatable="false">Network_error</string>
    <string name="retry" translatable="false">Retry</string>
</resources>