<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/top_avatar"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="-32dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="-32dp"
        android:contentDescription="@string/description_avatar"/>

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/author"
        app:layout_constraintTop_toTopOf="@id/top_avatar"
        app:layout_constraintBottom_toTopOf="@id/datePublication"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/top_avatar"
        app:layout_constraintEnd_toStartOf="@id/buttonMenu"
        android:layout_marginStart="-16dp"/>

    <TextView
        android:id="@+id/datePublication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datePublication"
        app:layout_constraintStart_toStartOf="@id/author"
        app:layout_constraintTop_toBottomOf="@id/author"
        app:layout_constraintBottom_toBottomOf="@id/top_avatar"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMenu"
        android:layout_width="24dp"
        android:layout_height="48dp"
        android:contentDescription="@string/description_baseline_more_vert_24"
        app:iconGravity="textEnd"
        app:layout_constraintTop_toTopOf="@id/author"
        app:layout_constraintEnd_toEndOf="parent"
        app:icon="@drawable/baseline_more_vert_24"
        style="@style/Theme.NMedia.Button.TextButton.Icon.StatisticsButton"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/top_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="top_avatar, datePublication, author"
        app:barrierDirection="bottom"
        app:barrierMargin="-16dp"/>

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/content"
        app:layout_constraintTop_toBottomOf="@id/top_barrier"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bottom_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="content"
        app:barrierDirection="bottom"
        app:barrierMargin="4dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_avatar"
        app:layout_constraintTop_toTopOf="@id/bottom_barrier"
        app:icon="@drawable/favorite_selector"
        app:iconTint="@color/favorite_button_icon"
        style="@style/Theme.NMedia.Button.TextButton.Icon.StatisticsButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_avatar"
        app:layout_constraintTop_toTopOf="@id/buttonFavorite"
        app:layout_constraintStart_toEndOf="@id/buttonFavorite"
        app:icon="@drawable/share_24"
        style="@style/Theme.NMedia.Button.TextButton.Icon.StatisticsButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonVisibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_avatar"
        android:clickable="false"
        app:layout_constraintTop_toTopOf="@id/buttonShare"
        app:layout_constraintEnd_toEndOf="parent"
        app:icon="@drawable/visibility_24"
        style="@style/Theme.NMedia.Button.TextButton.Icon.StatisticsButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>